--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "author": "Braden <fish2355@hotmail.com>",
   "license": "MIT",
   "dependencies": {
-    "bcrypt": "^3.0.8",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.10",
     "morgan": "^1.9.1",
+    "nodemon": "^2.0.2",
     "sqlite3": "^4.1.1"
   }
 }
